--- a/index.html
+++ b/index.html
@@ -320,11 +320,13 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p><img src="images/muzeeb.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left"></p>
-<p>I like to analyze data to answer research questions and test hypotheses. Currently I investigate questions related to breast cancer through my work as a Research Biostatistician at <a href="https://www.mskcc.org/departments/epidemiology-biostatistics">Memorial Sloan Kettering Cancer Center</a> in the department of Epidemiology &amp; Biostatistics.</p>
-<p>I graduated from the <a href="http://www.sph.umn.edu/academics/divisions/biostatistics/">University of Minnesota</a> with a MS in biostatistics in 2010. In 2012 I began working toward my DrPH in biostatistics as a part-time student at <a href="https://www.mailman.columbia.edu/become-student/departments/biostatistics">Columbia University</a>, where I am investigating statistical methods for the study of etiologic heterogeneity in epidemiologic studies under the advisement of <a href="https://www.mailman.columbia.edu/people/our-faculty/sw2206">Dr. Shuang Wang</a> at Columbia University and <a href="https://www.mskcc.org/profile/colin-begg">Dr. Colin Begg</a> at Memorial Sloan Kettering Cancer Center. I expect to graduate by the end of 2018.</p>
-<p>I am a well-known R enthusiast, including serving on the board and being an active member of <a href="http://www.rladiesnyc.org/">R Ladies NYC</a>.</p>
-<p>My full CV is available <a href="files/Muzeeb_Shaik_CV_May_2020.pdf">here</a>.</p>
+<p><img src="images/muzeeb.jpg" style="width:30%; border:6px solid; margin-right: 20px" align="left"></p>
+<div id="i-am-a-second-year-phd-student-in-the-marketing-departmenat-at-mays-business-school-texas-am-university.-i-am-currently-advised-by-dr.shrihari-sridhar-at-texas-am-university-and-dr.vikas-mittal-at-rice-university." class="section level4">
+<h4>I am a second year PhD student in the Marketing departmenat at Mays Business School, Texas A&amp;M University. I am currently advised by <a href="https://mays.tamu.edu/directory/shriharisridhar/">Dr.Shrihari Sridhar</a> at Texas A&amp;M University and <a href="https://business.rice.edu/person/vikas-mittal">Dr.Vikas Mittal</a> at Rice University.</h4>
+</div>
+<div id="my-full-cv-is-available-here." class="section level4">
+<h4>My full CV is available <a href="files/Muzeeb_Shaik_CV_May_2020.pdf">here</a>.</h4>
+</div>
 
 
 
