--- a/teaching.html
+++ b/teaching.html
@@ -11,7 +11,7 @@
 
 
 
-<title>index.utf8</title>
+<title>teaching.utf8</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -319,13 +319,19 @@ $(document).ready(function () {
 </div>
 
 
-<p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p><img src="images/muzeeb.jpg" style="width:30%; border:6px solid; margin-right: 20px" align="left"></p>
-<div id="i-am-a-second-year-phd-student-in-the-marketing-departmenat-at-mays-business-school-texas-am-university.-i-am-currently-advised-by-dr.shrihari-sridhar-at-texas-am-university-and-dr.vikas-mittal-at-rice-university." class="section level4">
-<h4>I am a second year PhD student in the Marketing departmenat at Mays Business School, Texas A&amp;M University. I am currently advised by <a href="https://mays.tamu.edu/directory/shriharisridhar/">Dr.Shrihari Sridhar</a> at Texas A&amp;M University and <a href="https://business.rice.edu/person/vikas-mittal">Dr.Vikas Mittal</a> at Rice University.</h4>
+<p> </p>
+<div id="texas-am-university" class="section level2">
+<h2><u>Texas A&amp;M University</u></h2>
+<p> </p>
 </div>
-<div id="my-full-cv-is-available-here." class="section level4">
-<h4>My full CV is available <a href="files/Muzeeb_Shaik_CV_May_2020.pdf">here</a>.</h4>
+<div id="texas-tech-university" class="section level2">
+<h2><u>Texas Tech University</u></h2>
+<ul>
+<li>Teaching Assistant: Engineering Economic Analysis (IE2324)
+<ul>
+<li>Spring 2015, Fall 2015 &amp; Spring 2016</li>
+</ul></li>
+</ul>
 </div>
 
 
