--- a/teaching.html
+++ b/teaching.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Muzeeb Teaching</title>
+<title>teaching.utf8</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
