--- a/index.html
+++ b/index.html
@@ -280,6 +280,9 @@ $(document).ready(function () {
 <li>
   <a href="teaching.html">Teaching</a>
 </li>
+<li>
+  <a href="files/Muzeeb_Shaik_CV_May_2020.pdf">CV</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
@@ -319,14 +322,13 @@ $(document).ready(function () {
 </div>
 
 
-<p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p><img src="images/muzeeb.jpg" style="width:30%; border:6px solid; margin-right: 20px" align="left"></p>
-<div id="i-am-a-second-year-phd-student-in-the-marketing-departmenat-at-mays-business-school-texas-am-university.-i-am-currently-advised-by-dr.shrihari-sridhar-at-texas-am-university-and-dr.vikas-mittal-at-rice-university." class="section level4">
-<h4>I am a second year PhD student in the Marketing departmenat at Mays Business School, Texas A&amp;M University. I am currently advised by <a href="https://mays.tamu.edu/directory/shriharisridhar/">Dr.Shrihari Sridhar</a> at Texas A&amp;M University and <a href="https://business.rice.edu/person/vikas-mittal">Dr.Vikas Mittal</a> at Rice University.</h4>
-</div>
-<div id="my-full-cv-is-available-here." class="section level4">
-<h4>My full CV is available <a href="files/Muzeeb_Shaik_CV_May_2020.pdf">here</a>.</h4>
-</div>
+<hr />
+<hr />
+<p><a href="https://harishguda.me/about/"><img src="images/muzeeb.jpg" style="max-width:30%;min-width:60px;float:right;" /></a></p>
+<p>Hi.</p>
+<p>I am Muzeeb Shaik. I am a second year PhD student in the Marketing Departmenat at the <a href="https://mays.tamu.edu/">Mays Business School</a> at Texas A&amp;M University.</p>
+<p>My research interests are at the interface of Interfirm Relationships (B2B), Sales Force, Causal Inference and Machine Learning.</p>
+<p>My full CV is available <a href="files/Muzeeb_Shaik_CV_May_2020.pdf">here</a>.</p>
 
 
 
