--- a/contact.html
+++ b/contact.html
@@ -280,6 +280,9 @@ $(document).ready(function () {
 <li>
   <a href="teaching.html">Teaching</a>
 </li>
+<li>
+  <a href="files/Muzeeb_Shaik_CV_May_2020.pdf">CV</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
