--- a/research.html
+++ b/research.html
@@ -326,8 +326,8 @@ $(document).ready(function () {
 <div id="work-in-progress" class="section level2">
 <h2><u>Work in Progress </u></h2>
 <ul>
-<li>“Price Sensitivity and Customer Perceived Switching Costs in Business-to-Business Markets: Joint Effect on Customer Repurchase Intentions,”with Narendra Bosukonda, Vikas Mittal &amp; Shrihari Sridhar.</li>
-<li>“The Asymmetric Association of Customer Commitment and Behavioral Intentions in Business-to-Business Markets,” with Narendra Bosukonda, Vikas Mittal &amp; Shrihari Sridhar.</li>
+<li><p>“Price Sensitivity and Customer Perceived Switching Costs in Business-to-Business Markets: Joint Effect on Customer Repurchase Intentions,”with Narendra Bosukonda, Vikas Mittal &amp; Shrihari Sridhar.  </p></li>
+<li><p>“The Asymmetric Association of Customer Commitment and Behavioral Intentions in Business-to-Business Markets,” with Narendra Bosukonda, Vikas Mittal &amp; Shrihari Sridhar.</p></li>
 </ul>
 </div>
 
