--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ $(document).ready(function () {
 <p><a href="https://harishguda.me/about/"><img src="images/muzeeb.jpg" style="max-width:30%;min-width:60px;float:right;" /></a></p>
 <p>Hi.</p>
 <p>I am Muzeeb Shaik. I am a second year PhD student in the Marketing Departmenat at the <a href="https://mays.tamu.edu/">Mays Business School</a> at Texas A&amp;M University.</p>
-<p>My research interests are at the interface of Interfirm Relationships (B2B), Sales Force, Causal Inference and Machine Learning.</p>
+<p>My research interests are at the intesection of Interfirm Relationships (B2B), Sales Force, Causal Inference and Machine Learning.</p>
 <p>My full CV is available <a href="files/Muzeeb_Shaik_CV_May_2020.pdf">here</a>.</p>
 
 
