--- a/research.html
+++ b/research.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Muzeeb Research</title>
+<title>Research</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -318,16 +318,25 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore">Research</h1>
 
 </div>
 
 
 <p> </p>
-<div id="work-in-progress" class="section level2">
-<h2><u>Work in Progress </u></h2>
+<div id="working-papers" class="section level2">
+<h2><u>Working Papers </u></h2>
 <ul>
-<li><p>“Price Sensitivity and Customer Perceived Switching Costs in Business-to-Business Markets: Joint Effect on Customer Repurchase Intentions,”with Narendra Bosukonda, Vikas Mittal &amp; Shrihari Sridhar.  </p></li>
-<li><p>“The Asymmetric Association of Customer Commitment and Behavioral Intentions in Business-to-Business Markets,” with Narendra Bosukonda, Vikas Mittal &amp; Shrihari Sridhar.</p></li>
+<li>“Price Sensitivity and Customer Perceived Switching Costs in Business-to-Business Markets: Joint Effect on Customer Repurchase Intentions.”
+<ul>
+<li>Joint work with Narendra Bosukonda, Vikas Mittal &amp; Shrihari Sridhar.</li>
+<li><a href="https://papers.ssrn.com/abstract=3530532">SSRN</a>  </li>
+</ul></li>
+<li>“The Asymmetric Association of Customer Commitment and Behavioral Intentions in Business-to-Business Markets.”
+<ul>
+<li>Joint work with Narendra Bosukonda, Vikas Mittal &amp; Shrihari Sridhar.</li>
+<li><a href="https://papers.ssrn.com/abstract=3532546">SSRN</a></li>
+</ul></li>
 </ul>
 </div>
 
