--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Muzeeb Shaik</title>
+<title>About Me</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -318,6 +318,7 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore">About Me</h1>
 
 </div>
 
