--- a/teaching.html
+++ b/teaching.html
@@ -325,11 +325,16 @@ $(document).ready(function () {
 
 <p> </p>
 <div id="texas-am-university" class="section level2">
-<h2><u>Texas A&amp;M University</u></h2>
-<p> </p>
+<h2>Texas A&amp;M University</h2>
+<ul>
+<li>Marketing Analytics (Undergraduate)
+<ul>
+<li>Fall 2020 (scheduled)  </li>
+</ul></li>
+</ul>
 </div>
 <div id="texas-tech-university" class="section level2">
-<h2><u>Texas Tech University</u></h2>
+<h2>Texas Tech University</h2>
 <ul>
 <li>Teaching Assistant: Engineering Economic Analysis (IE2324)
 <ul>
