--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ $(document).ready(function () {
 </div>
 
 
-<p><a href="https://muzeeb-shaik.github.io/"><img src="images/muzeeb.jpg" style="max-width:30%;min-width:60px;float:right;" /></a></p>
+<p><img src="images/muzeeb.jpg" style="max-width:30%;min-width:60px;float:right;" /></p>
 <p>Hi.</p>
 <p>I am Muzeeb Shaik. I am a second year PhD student in the Marketing Departmenat at the <a href="https://mays.tamu.edu/">Mays Business School</a> at Texas A&amp;M University.</p>
 <p>My research interests are at the intesection of Interfirm Relationships (B2B), Sales Force, Causal Inference and Machine Learning.</p>
