--- a/index.html
+++ b/index.html
@@ -325,8 +325,7 @@ $(document).ready(function () {
 
 <p><img src="images/muzeeb.jpg" style="max-width:30%;min-width:60px;float:right;" /></p>
 <p>Hi.</p>
-<p>I am Muzeeb Shaik. I am a second year PhD student in the Marketing Departmenat at the <a href="https://mays.tamu.edu/">Mays Business School</a> at Texas A&amp;M University.</p>
-<p>My research interests are at the intesection of Interfirm Relationships (B2B), Sales Force, Causal Inference and Machine Learning.</p>
+<p>I am Muzeeb Shaik. I am a second year PhD student in the Marketing Department at the <a href="https://mays.tamu.edu/">Mays Business School</a> at Texas A&amp;M University. My current research focuses on Interfirm Relationships (B2B) and Sales Force Effectiveness. I am co-advised by <a href="https://mays.tamu.edu/directory/shriharisridhar/">Hari Sridhar</a> (Texas A&amp;M University) and <a href="https://business.rice.edu/person/vikas-mittal">Vikas Mittal</a> (Rice University).</p>
 <p>My full CV is available <a href="files/Muzeeb_Shaik_CV_May_2020.pdf">here</a>.</p>
 
 
