--- a/teaching.html
+++ b/teaching.html
@@ -325,7 +325,7 @@ $(document).ready(function () {
 
 <p> </p>
 <div id="texas-am-university" class="section level2">
-<h2>Texas A&amp;M University</h2>
+<h2><u>Texas A&amp;M University</u></h2>
 <ul>
 <li>Marketing Analytics (Undergraduate)
 <ul>
@@ -334,7 +334,7 @@ $(document).ready(function () {
 </ul>
 </div>
 <div id="texas-tech-university" class="section level2">
-<h2>Texas Tech University</h2>
+<h2><u>Texas Tech University</u></h2>
 <ul>
 <li>Teaching Assistant: Engineering Economic Analysis (IE2324)
 <ul>
