--- a/teaching.html
+++ b/teaching.html
@@ -327,18 +327,23 @@ $(document).ready(function () {
 <div id="texas-am-university" class="section level2">
 <h2><u>Texas A&amp;M University</u></h2>
 <ul>
-<li>Marketing Analytics (Undergraduate)
+<li>Instructor: Marketing Analytics (Undergraduate)
 <ul>
-<li>Fall 2020 (scheduled)  </li>
+<li>Fall 2020 (scheduled)</li>
+</ul></li>
+<li>Teaching Assistant: Marketing Management (MBA)
+<ul>
+<li>Fall 2019</li>
 </ul></li>
 </ul>
+<p> </p>
 </div>
 <div id="texas-tech-university" class="section level2">
 <h2><u>Texas Tech University</u></h2>
 <ul>
 <li>Teaching Assistant: Engineering Economic Analysis (IE2324)
 <ul>
-<li>Spring 2015, Fall 2015 &amp; Spring 2016</li>
+<li>Spring 2015, Fall 2015 and Spring 2016</li>
 </ul></li>
 </ul>
 </div>
