--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p><img src="images/muzeeb.jpg" style="width:25%; ; margin-right: 20px ; margin-up20px" align="left"></p>
+<p><img src="images/muzeeb.jpg" style="width:25%;height:50% ; margin-right: 20px ; margin-up20px" align="left"></p>
 <p>Hi.</p>
 <p>I am Muzeeb Shaik. I am a second year PhD student in the Marketing Department at the <a href="https://mays.tamu.edu/">Mays Business School</a> at Texas A&amp;M University. My current research focuses on Interfirm Relationships (B2B) and Sales Force Effectiveness. I am co-advised by <a href="https://mays.tamu.edu/directory/shriharisridhar/">Hari Sridhar</a> (Texas A&amp;M University) and <a href="https://business.rice.edu/person/vikas-mittal">Vikas Mittal</a> (Rice University).</p>
 <p>My full CV is available <a href="files/Muzeeb_Shaik_CV_May_2020.pdf">here</a>.</p>
