--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="google-site-verification" content="sCssDetE3VRjWgqrUf-TfHfc6zg7E8RWBoBnw_s3ZDk" />
 
 
-<title>Muzeeb Shaik</title>
+<title>Muzeeb Shaiks</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
