--- a/teaching.html
+++ b/teaching.html
@@ -292,7 +292,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="https://github.com/muzeeb1408">
+  <a href="https://github.com/muzeeb-shaik">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
