Added Copy Right at the bottom

--- a/contact.html
+++ b/contact.html
@@ -323,15 +323,20 @@ $(document).ready(function () {
 </div>
 
 
-<p> </p>
+<hr />
 <p>I’d love to hear from you, so feel free to reach out at <a href="mailto:mshaik@mays.tamu.edu" class="email">mshaik@mays.tamu.edu</a>.</p>
-<p><strong>Muzeeb Shaik</strong></p>
-<p>4112, TAMU</p>
-<p>Office 215C</p>
-<p>Wehner Building</p>
-<p>Texas A&amp;M University</p>
+<p><strong>Muzeeb Shaik</strong><br />
+4112, TAMU<br />
+Office 215C<br />
+Wehner Building<br />
+Texas A&amp;M University</p>
 <p>  Or connect with me on GitHub, Twitter, or Linkedin (links in top right).</p>
 
+&nbsp;
+<hr />
+<p style="text-align: center;"><span style="color: #808080;"><em>Copyright © Muzeeb Shaik 2020- All Rights Reserved.</em></span></p>
+
+&nbsp;
 
 
 
