--- a/footer.html
+++ b/footer.html
@@ -1,1 +1,5 @@
-Copyright © Muzeeb Shaik 2020 - All Rights Reserved.
+&nbsp;
+<hr />
+<p style="text-align: center;"><span style="color: #808080;"><em>Copyright © Muzeeb Shaik 2020- All Rights Reserved.</em></span></p>
+
+&nbsp;
