--- a/research.html
+++ b/research.html
@@ -318,11 +318,12 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore">Research</h1>
 
 </div>
 
 
-<p> </p>
+<hr />
 <div id="working-papers" class="section level2">
 <h2><u>Working Papers </u></h2>
 <ul>
@@ -339,6 +340,11 @@ $(document).ready(function () {
 </ul>
 </div>
 
+&nbsp;
+<hr />
+<p style="text-align: center;"><span style="color: #808080;"><em>Copyright © Muzeeb Shaik 2020- All Rights Reserved.</em></span></p>
+
+&nbsp;
 
 
 
