--- a/teaching.html
+++ b/teaching.html
@@ -318,11 +318,12 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore">Teaching</h1>
 
 </div>
 
 
-<p> </p>
+<hr />
 <div id="texas-am-university" class="section level2">
 <h2><u>Texas A&amp;M University</u></h2>
 <ul>
@@ -333,9 +334,9 @@ $(document).ready(function () {
 <li>Teaching Assistant: Marketing Management (MBA)
 <ul>
 <li>Fall 2019</li>
+<li> </li>
 </ul></li>
 </ul>
-<p> </p>
 </div>
 <div id="texas-tech-university" class="section level2">
 <h2><u>Texas Tech University</u></h2>
@@ -347,6 +348,11 @@ $(document).ready(function () {
 </ul>
 </div>
 
+&nbsp;
+<hr />
+<p style="text-align: center;"><span style="color: #808080;"><em>Copyright © Muzeeb Shaik 2020- All Rights Reserved.</em></span></p>
+
+&nbsp;
 
 
 
