--- a/index.html
+++ b/index.html
@@ -327,7 +327,13 @@ $(document).ready(function () {
 <p>Hi.</p>
 <p>I am Muzeeb Shaik. I am a second year PhD student in the Marketing Department at the <a href="https://mays.tamu.edu/">Mays Business School</a> at Texas A&amp;M University. My current research focuses on Interfirm Relationships (B2B) and Sales Force Effectiveness. I am co-advised by <a href="https://mays.tamu.edu/directory/shriharisridhar/">Hari Sridhar</a> (Texas A&amp;M University) and <a href="https://business.rice.edu/person/vikas-mittal">Vikas Mittal</a> (Rice University).</p>
 <p>My full CV is available <a href="files/Muzeeb_Shaik_CV_May_2020.pdf">here</a>.</p>
+<p><br><br><br><br> <br><br><br><br></p>
 
+&nbsp;
+<hr />
+<p style="text-align: center;"><span style="color: #808080;"><em>Copyright © Muzeeb Shaik 2020- All Rights Reserved.</em></span></p>
+
+&nbsp;
 
 
 
