--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/simplex.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/highlightjs-9.12.0/textmate.css" rel="stylesheet" />
+<link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
@@ -105,33 +105,33 @@ summary {
 <style type="text/css">
 /* padding for bootstrap navbar */
 body {
-  padding-top: 41px;
+  padding-top: 60px;
   padding-bottom: 40px;
 }
 /* offset scroll position for anchor links (for fixed navbar)  */
 .section h1 {
-  padding-top: 46px;
-  margin-top: -46px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .section h2 {
-  padding-top: 46px;
-  margin-top: -46px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .section h3 {
-  padding-top: 46px;
-  margin-top: -46px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .section h4 {
-  padding-top: 46px;
-  margin-top: -46px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .section h5 {
-  padding-top: 46px;
-  margin-top: -46px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .section h6 {
-  padding-top: 46px;
-  margin-top: -46px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .dropdown-submenu {
   position: relative;
@@ -323,9 +323,12 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p><img src="images/muzeeb.jpg" style="width:25%; ; margin-right: 20px" align="left"></p>
+<img src="images/muzeeb.jpg" style="width:25%; ; margin-right: 20px" align="left">
+<p>
+ 
+</p>
 <p>Hi.</p>
-<p>I am Muzeeb Shaik. I am a second year PhD student in the Marketing Department at the <a href="https://mays.tamu.edu/">Mays Business School</a> at Texas A&amp;M University. My current research focuses on Interfirm Relationships (B2B) and Sales Force Effectiveness. I am co-advised by <a href="https://mays.tamu.edu/directory/shriharisridhar/">Hari Sridhar</a> (Texas A&amp;M University) and <a href="https://business.rice.edu/person/vikas-mittal">Vikas Mittal</a> (Rice University).</p>
+<p>I am a second year PhD student in the Marketing Department at the <a href="https://mays.tamu.edu/">Mays Business School</a> at Texas A&amp;M University. My current research focuses on Interfirm Relationships (B2B) and Sales Force Effectiveness. I am co-advised by <a href="https://mays.tamu.edu/directory/shriharisridhar/">Hari Sridhar</a> (Texas A&amp;M University) and <a href="https://business.rice.edu/person/vikas-mittal">Vikas Mittal</a> (Rice University).</p>
 <p>My full CV is available <a href="files/Muzeeb_Shaik_CV_May_2020.pdf">here</a>.</p>
 <p><br><br><br><br> <br><br><br><br></p>
 
