--- a/research.html
+++ b/research.html
@@ -330,12 +330,16 @@ $(document).ready(function () {
 <li>“Price Sensitivity and Customer Perceived Switching Costs in Business-to-Business Markets: Joint Effect on Customer Repurchase Intentions.”
 <ul>
 <li>Joint work with Narendra Bosukonda, Vikas Mittal &amp; Shrihari Sridhar.</li>
-<li><a href="https://papers.ssrn.com/abstract=3530532">SSRN</a>  </li>
+<li><a href="https://papers.ssrn.com/abstract=3530532" target="_blank">SSRN</a>  </li>
 </ul></li>
 <li>“The Asymmetric Association of Customer Commitment and Behavioral Intentions in Business-to-Business Markets.”
 <ul>
 <li>Joint work with Narendra Bosukonda, Vikas Mittal &amp; Shrihari Sridhar.</li>
-<li><a href="https://papers.ssrn.com/abstract=3532546">SSRN</a></li>
+<li><a href="https://papers.ssrn.com/abstract=3532546" target="_blank">SSRN</a></li>
+</ul></li>
+<li>“Novel Application of Predictive Modeling: Identifying Patients for a Tailored Approach to Promoting HCC Surveillance in Patients with Cirrhosis.”
+<ul>
+<li>Joint work with Amit G. Singal, Yixing Chen, Shrihari Sridhar, Vikas Mittal, Hannah Fullington, Akbar K. Waljee &amp; Jasmin Tiro</li>
 </ul></li>
 </ul>
 </div>
