Font Size Update

--- a/index.html
+++ b/index.html
@@ -322,6 +322,11 @@ $(document).ready(function () {
 </div>
 
 
+<style>
+body {
+  font-size: 16px;
+}
+</style>
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p><img src="images/muzeeb.jpg" style="width:25%; border:5px solid; margin-right: 20px" align="left"></p>
 <p>Hi.</p>
