--- a/contact.html
+++ b/contact.html
@@ -323,6 +323,11 @@ $(document).ready(function () {
 </div>
 
 
+<style>
+body {
+  font-size: 16px;
+}
+</style>
 <hr />
 <p>I’d love to hear from you, so feel free to reach out at <a href="mailto:mshaik@mays.tamu.edu" class="email">mshaik@mays.tamu.edu</a>.</p>
 <p>Or connect with me on GitHub, Twitter, or Linkedin (links in top right).</p>
