--- a/research.html
+++ b/research.html
@@ -323,6 +323,11 @@ $(document).ready(function () {
 </div>
 
 
+<style>
+body {
+  font-size: 16px;
+}
+</style>
 <hr />
 <div id="working-papers" class="section level3">
 <h3><u>Working Papers </u></h3>
