--- a/teaching.html
+++ b/teaching.html
@@ -323,6 +323,11 @@ $(document).ready(function () {
 </div>
 
 
+<style>
+body {
+  font-size: 16px;
+}
+</style>
 <hr />
 <div id="texas-am-university" class="section level3">
 <h3><u>Texas A&amp;M University</u></h3>
