--- a/teaching.html
+++ b/teaching.html
@@ -281,7 +281,7 @@ $(document).ready(function () {
   <a href="teaching.html">Teaching</a>
 </li>
 <li>
-  <a href="files/Muzeeb_Shaik_CV_July_2020.pdf">CV</a>
+  <a href="files/Muzeeb_Shaik_CV_Aug_2020.pdf">CV</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -334,7 +334,7 @@ body {
 <ul>
 <li>Instructor: Marketing Analytics (Undergraduate)
 <ul>
-<li>Fall 2020 (scheduled)</li>
+<li>Fall 2020</li>
 </ul></li>
 <li>Teaching Assistant: Marketing Management (MBA)
 <ul>
