--- a/index.html
+++ b/index.html
@@ -324,11 +324,11 @@ $(document).ready(function () {
 
 <style>
 body {
-  font-size: 16px;
+  font-size: 20px;
 }
 </style>
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p><img src="images/muzeeb.jpg" style="width:25%; border:5px solid; margin-right: 20px" align="left"></p>
+<p><img src="images/muzeeb.jpg" style="width:25%; height = 20%; border:5px white; margin-right: 20px" align="left"></p>
 <p>I am a third year PhD student in the Marketing Department at the <a href="https://mays.tamu.edu/" target="_blank">Mays Business School</a> at Texas A&amp;M University.</p>
 <p>My current research focuses on Interfirm Relationships (B2B) and Sales Force Effectiveness. I am co-advised by <a href="https://mays.tamu.edu/directory/shriharisridhar/" target="_blank">Hari Sridhar</a> (Texas A&amp;M University) and <a href="https://business.rice.edu/person/vikas-mittal" target="_blank">Vikas Mittal</a> (Rice University).</p>
 <p>My full CV is available <a href="files/Muzeeb_Shaik_CV_July_2020.pdf" target="_blank">here</a>.</p>
