--- a/research.html
+++ b/research.html
@@ -13,6 +13,7 @@
 
 <title>Research</title>
 
+<script src="site_libs/header-attrs-2.5/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/paper.min.css" rel="stylesheet" />
@@ -22,8 +23,19 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
+<link href="site_libs/anchor-sections-1.0/anchor-sections.css" rel="stylesheet" />
+<script src="site_libs/anchor-sections-1.0/anchor-sections.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
+
+<style type="text/css">
+  code{white-space: pre-wrap;}
+  span.smallcaps{font-variant: small-caps;}
+  span.underline{text-decoration: underline;}
+  div.column{display: inline-block; vertical-align: top; width: 50%;}
+  div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+  ul.task-list{list-style: none;}
+    </style>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -332,6 +344,12 @@ body {
 <div id="working-papers" class="section level3">
 <h3><u>Working Papers </u></h3>
 <ul>
+<li>“Novel Application of Predictive Modeling: Identifying Patients for a Tailored Approach to Promoting HCC Surveillance in Patients with Cirrhosis.”
+<ul>
+<li>Joint work with Amit G. Singal, Yixing Chen, Shrihari Sridhar, Vikas Mittal, Hannah Fullington, Akbar K. Waljee &amp; Jasmin Tiro</li>
+<li>Revise and resubmit at <em>Clinical Gastroenterology and Hepatology</em>.  <br />
+</li>
+</ul></li>
 <li>“Price Sensitivity and Customer Perceived Switching Costs in Business-to-Business Markets: Joint Effect on Customer Repurchase Intentions.”
 <ul>
 <li>Joint work with Narendra Bosukonda, Vikas Mittal &amp; Shrihari Sridhar.</li>
@@ -340,11 +358,7 @@ body {
 <li>“The Asymmetric Association of Customer Commitment and Behavioral Intentions in Business-to-Business Markets.”
 <ul>
 <li>Joint work with Narendra Bosukonda, Vikas Mittal &amp; Shrihari Sridhar.</li>
-<li><a href="https://papers.ssrn.com/abstract=3532546" target="_blank">SSRN</a>  </li>
-</ul></li>
-<li>“Novel Application of Predictive Modeling: Identifying Patients for a Tailored Approach to Promoting HCC Surveillance in Patients with Cirrhosis.”
-<ul>
-<li>Joint work with Amit G. Singal, Yixing Chen, Shrihari Sridhar, Vikas Mittal, Hannah Fullington, Akbar K. Waljee &amp; Jasmin Tiro</li>
+<li><a href="https://papers.ssrn.com/abstract=3532546" target="_blank">SSRN</a></li>
 </ul></li>
 </ul>
 </div>
@@ -363,7 +377,7 @@ body {
 
 // add bootstrap table styles to pandoc tables
 function bootstrapStylePandocTables() {
-  $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
+  $('tr.odd').parent('tbody').parent('table').addClass('table table-condensed');
 }
 $(document).ready(function () {
   bootstrapStylePandocTables();
