--- a/teaching.html
+++ b/teaching.html
@@ -13,6 +13,7 @@
 
 <title>Teaching</title>
 
+<script src="site_libs/header-attrs-2.5/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/paper.min.css" rel="stylesheet" />
@@ -22,8 +23,19 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
+<link href="site_libs/anchor-sections-1.0/anchor-sections.css" rel="stylesheet" />
+<script src="site_libs/anchor-sections-1.0/anchor-sections.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
+
+<style type="text/css">
+  code{white-space: pre-wrap;}
+  span.smallcaps{font-variant: small-caps;}
+  span.underline{text-decoration: underline;}
+  div.column{display: inline-block; vertical-align: top; width: 50%;}
+  div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+  ul.task-list{list-style: none;}
+    </style>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -334,7 +346,21 @@ body {
 <ul>
 <li>Instructor: Marketing Analytics (Undergraduate)
 <ul>
-<li>Fall 2020</li>
+<li>Fall 2020 (45 students enrolled across two sections)</li>
+<li>Teaching Evaluation: 4.3/5
+<ul>
+<li>Department average for Fall 2020 - 3.66/5</li>
+</ul></li>
+<li>Studnets’ Comments
+<ul>
+<li>“[Muzeeb] understood the problems of students well, went beyond his own necessary capacities to ensure we understood material, and was truly passionate about the topic at hand.”</li>
+<li>“He always encouraged us to initiate our learning process and take responsibility of our work”</li>
+<li>“Professor was very communicative with students and feedback was offered throughout projects. This was extremely helpful.”</li>
+<li>“He really wanted to see his students succeed and was very helpful when needed.”</li>
+<li>“He always made himself available to meet with us and emphasized he is there to be a resource to support us now and even in the future. Which means a lot.”</li>
+<li>“Professor taught by doing– Loved this.”</li>
+</ul>
+ </li>
 </ul></li>
 <li>Teaching Assistant: Marketing Management (MBA)
 <ul>
@@ -351,6 +377,9 @@ body {
 </ul></li>
 </ul>
 </div>
+<div id="section" class="section level3">
+<h3></h3>
+</div>
 
 &nbsp;
 <hr />
@@ -366,7 +395,7 @@ body {
 
 // add bootstrap table styles to pandoc tables
 function bootstrapStylePandocTables() {
-  $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
+  $('tr.odd').parent('tbody').parent('table').addClass('table table-condensed');
 }
 $(document).ready(function () {
   bootstrapStylePandocTables();
