Update teaching page

--- a/teaching.html
+++ b/teaching.html
@@ -351,14 +351,14 @@ body {
 <ul>
 <li>Department average for Fall 2020 - 3.66/5</li>
 </ul></li>
-<li>Studnets’ Comments
+<li>Students’ Comments
 <ul>
-<li>“[Muzeeb] understood the problems of students well, went beyond his own necessary capacities to ensure we understood material, and was truly passionate about the topic at hand.”</li>
-<li>“He always encouraged us to initiate our learning process and take responsibility of our work”</li>
-<li>“Professor was very communicative with students and feedback was offered throughout projects. This was extremely helpful.”</li>
-<li>“He really wanted to see his students succeed and was very helpful when needed.”</li>
-<li>“He always made himself available to meet with us and emphasized he is there to be a resource to support us now and even in the future. Which means a lot.”</li>
-<li>“Professor taught by doing– Loved this.”</li>
+<li>“[Muzeeb] understood the problems of students well, went beyond his own necessary capacities to ensure we understood material, and was truly passionate about the topic at hand”.</li>
+<li>“He always encouraged us to initiate our learning process and take responsibility of our work”.</li>
+<li>“Professor was very communicative with students and feedback was offered throughout projects. This was extremely helpful”.</li>
+<li>“He really wanted to see his students succeed and was very helpful when needed”.</li>
+<li>“He always made himself available to meet with us and emphasized he is there to be a resource to support us now and even in the future. Which means a lot”.</li>
+<li>“Professor taught by doing– Loved this”.</li>
 </ul>
  </li>
 </ul></li>
