--- a/contact.html
+++ b/contact.html
@@ -292,12 +292,12 @@ $(document).ready(function () {
   <a href="teaching.html">Teaching</a>
 </li>
 <li>
-  <a href="files/Muzeeb_Shaik_CV_Aug_2020.pdf">CV</a>
+  <a href="files/Muzeeb_Shaik_CV_Feb_2021.pdf">CV</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="mailto:rs2452@cornell.edu">
+  <a href="mailto:mshaik#@mays.tamu.edu">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
