--- a/research.html
+++ b/research.html
@@ -2093,9 +2093,9 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
     --fig-cap-color:   rgba(0, 0, 0, 0.6);
     /*-- Specify custom fonts ~~~ must be imported above   --*/
     --heading-font:    "Cormorant", sans-serif; /* edited */
-    --mono-font:       "Cormorant", monospace;  /* edited */
+    --mono-font:       "garamond", monospace;  /* edited */
     --body-font:       "Cormorant", sans-serif;          /* edited */
-    --navbar-font:     "Cormorant", sans-serif;          /* edited */
+    --navbar-font:     "garamond", sans-serif;          /* edited */
   }
 
   /*-- ARTICLE METADATA --*/
@@ -2181,7 +2181,6 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   h1 {
       text-align:center;
   }
-
 
   .main-container {
     max-width: 2500px;
@@ -2365,10 +2364,10 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <a href="index.html" class="title">Muzeeb Shaik</a>
 <a href="research.html">Research</a>
 <a href="teaching.html">Teaching</a>
-<a href="files/Muzeeb_Shaik_CV_Aug_2020.pdf">CV</a>
+<a href="files/Muzeeb_Shaik_CV_Feb_2021.pdf">CV</a>
 </div>
 <div class="nav-right">
-<a href="mailto:rs2452@cornell.edu">
+<a href="mailto:mshaik#@mays.tamu.edu">
 <i class="fa fa-envelope fa-lg" aria-hidden="true"></i>
 </a>
 <a href="https://github.com/muzeeb-shaik">
