Update main page and research

--- a/research.html
+++ b/research.html
@@ -2362,11 +2362,11 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <nav class="distill-site-nav distill-site-header">
 <div class="nav-left">
 <a href="index.html" class="title">Muzeeb Shaik</a>
+</div>
+<div class="nav-right">
 <a href="research.html">Research</a>
 <a href="teaching.html">Teaching</a>
 <a href="files/Muzeeb_Shaik_CV_Feb_2021.pdf">CV</a>
-</div>
-<div class="nav-right">
 <a href="mailto:mshaik#@mays.tamu.edu">
 <i class="fa fa-envelope fa-lg" aria-hidden="true"></i>
 </a>
@@ -2396,13 +2396,13 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 
 
 <div class="d-article">
-<h3 id="journal-publications">Journal Publications</h3>
+<h3 id="publications">Publications</h3>
 <ul>
-<li>Singal, Amit G., Yixing Chen, Shrihari Sridhar, Vikas Mittal, Hannah Fullington, <strong>Muzeeb Shaik</strong>, Akbar K. Waljee and Jasmin Tiro (2021), “Novel Application of Predictive Modeling: Identifying Patients for a Tailored Approach to Promoting HCC Surveillance in Patients with Cirrhosis,” provisionally accepted at <em>Clinical Gastroenterology and Hepatology</em>.</li>
+<li>Singal, Amit G., Yixing Chen, Shrihari Sridhar, Vikas Mittal, Hannah Fullington, <strong>Muzeeb Shaik</strong>, Akbar K. Waljee and Jasmin Tiro (2021), “Novel Application of Predictive Modeling: Identifying Patients for a Tailored Approach to Promoting HCC Surveillance in Patients with Cirrhosis,” <em>Clinical Gastroenterology and Hepatology</em> - Accepted (awaiting publication). <a href="https://doi.org/10.1016/j.cgh.2021.02.038">Link</a></li>
 </ul>
 <h3 id="working-papers">Working Papers</h3>
 <ul>
-<li>“Price Sensitivity and Customer Perceived Switching Costs in Business-to-Business Markets: Joint Effect on Customer Repurchase Intentions.”<a href="https://papers.ssrn.com/abstract=3530532" target="_blank">SSRN</a>
+<li>“Price Sensitivity and Customer Perceived Switching Costs in Business-to-Business Markets: Joint Effect on Customer Repurchase Intentions.” <a href="https://papers.ssrn.com/abstract=3530532" target="_blank">SSRN</a>
 <ul>
 <li>Joint work with Narendra Bosukonda, Vikas Mittal &amp; Shrihari Sridhar.</li>
 </ul></li>
