--- a/research.html
+++ b/research.html
@@ -2398,7 +2398,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <div class="d-article">
 <h3 id="publications">Publications</h3>
 <ul>
-<li>Singal, Amit G., Yixing Chen, Shrihari Sridhar, Vikas Mittal, Hannah Fullington, <strong>Muzeeb Shaik</strong>, Akbar K. Waljee and Jasmin Tiro (2021), “Novel Application of Predictive Modeling: Identifying Patients for a Tailored Approach to Promoting HCC Surveillance in Patients with Cirrhosis,” <em>Clinical Gastroenterology and Hepatology</em> - Accepted (awaiting publication). <a href="https://doi.org/10.1016/j.cgh.2021.02.038">Link</a></li>
+<li>Singal, Amit G., Yixing Chen, Shrihari Sridhar, Vikas Mittal, Hannah Fullington, <strong>Muzeeb Shaik</strong>, Akbar K. Waljee and Jasmin Tiro (2021), “Novel Application of Predictive Modeling: Identifying Patients for a Tailored Approach to Promoting HCC Surveillance in Patients with Cirrhosis,” <em>Clinical Gastroenterology and Hepatology</em> - Accepted (awaiting publication). <a href="https://doi.org/10.1016/j.cgh.2021.02.038" target="_blank">Link</a></li>
 </ul>
 <h3 id="working-papers">Working Papers</h3>
 <ul>
