--- a/contact.html
+++ b/contact.html
@@ -295,7 +295,7 @@ $(document).ready(function () {
   <a href="teaching.html">Teaching</a>
 </li>
 <li>
-  <a href="files/Muzeeb_Shaik_CV_Feb_2021.pdf">CV</a>
+  <a href="CV.html">CV</a>
 </li>
 <li>
   <a href="mailto:mshaik#@mays.tamu.edu">
