--- a/CV.html
+++ b/CV.html
@@ -85,27 +85,27 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 </style>
 
   <!--radix_placeholder_meta_tags-->
-  <title>Muzeeb Shaik: Teaching</title>
+  <title>Muzeeb Shaik: CV</title>
 
 
   <link rel="icon" type="image/png" href="images/favicon.png"/>
 
 
   <!--  https://developers.facebook.com/docs/sharing/webmasters#markup -->
-  <meta property="og:title" content="Muzeeb Shaik: Teaching"/>
+  <meta property="og:title" content="Muzeeb Shaik: CV"/>
   <meta property="og:type" content="article"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:site_name" content="Muzeeb Shaik"/>
 
   <!--  https://dev.twitter.com/cards/types/summary -->
   <meta property="twitter:card" content="summary"/>
-  <meta property="twitter:title" content="Muzeeb Shaik: Teaching"/>
+  <meta property="twitter:title" content="Muzeeb Shaik: CV"/>
 
   <!--/radix_placeholder_meta_tags-->
   <!--radix_placeholder_rmarkdown_metadata-->
 
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title"]}},"value":[{"type":"character","attributes":{},"value":["Teaching"]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title"]}},"value":[{"type":"character","attributes":{},"value":["CV"]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   <!--radix_placeholder_navigation_in_header-->
@@ -2353,7 +2353,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <!--radix_placeholder_front_matter-->
 
 <script id="distill-front-matter" type="text/json">
-{"title":"Teaching","authors":[]}
+{"title":"CV","authors":[]}
 </script>
 
 <!--/radix_placeholder_front_matter-->
@@ -2366,7 +2366,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <div class="nav-right">
 <a href="research.html">Research</a>
 <a href="teaching.html">Teaching</a>
-<a href="files/Muzeeb_Shaik_CV_Feb_2021.pdf">CV</a>
+<a href="CV.html">CV</a>
 <a href="mailto:mshaik#@mays.tamu.edu">
 <i class="fa fa-envelope fa-lg" aria-hidden="true"></i>
 </a>
@@ -2388,18 +2388,13 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <!--/radix_placeholder_site_before_body-->
 
 <div class="d-title">
-<h1>CV</h1>
-<!--radix_placeholder_categories-->
-<!--/radix_placeholder_categories-->
-
-
 
 </div>
 <div style="margin:0 auto;text-align:center">
 
       <!-- Div align in the middle -->
       <div style="margin-left:auto;margin-right:auto;text-align:center">
-            <object width="600px" height="800px" data="files/Muzeeb_Shaik_CV_Feb_2021.pdf"></object>
+            <object width="1000px" height="1000px" data="files/Muzeeb_Shaik_CV_Feb_2021.pdf"></object>
       </div>
 
 </div>
