--- a/teaching.html
+++ b/teaching.html
@@ -2366,7 +2366,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <div class="nav-right">
 <a href="research.html">Research</a>
 <a href="teaching.html">Teaching</a>
-<a href="CV.html">CV</a>
+<a href="files/Muzeeb_Shaik_CV_Feb_2021.pdf">CV</a>
 <a href="mailto:mshaik#@mays.tamu.edu">
 <i class="fa fa-envelope fa-lg" aria-hidden="true"></i>
 </a>
