--- a/contact.html
+++ b/contact.html
@@ -298,7 +298,7 @@ $(document).ready(function () {
   <a href="files/Muzeeb_Shaik_CV_Feb_2021.pdf">CV</a>
 </li>
 <li>
-  <a href="mailto:mshaik#@mays.tamu.edu">
+  <a href="mailto:mshaik@mays.tamu.edu">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
