--- a/teaching.html
+++ b/teaching.html
@@ -2367,7 +2367,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <a href="research.html">Research</a>
 <a href="teaching.html">Teaching</a>
 <a href="files/Muzeeb_Shaik_CV_Feb_2021.pdf">CV</a>
-<a href="mailto:mshaik#@mays.tamu.edu">
+<a href="mailto:mshaik@mays.tamu.edu">
 <i class="fa fa-envelope fa-lg" aria-hidden="true"></i>
 </a>
 <a href="https://github.com/muzeeb-shaik">
