--- a/research.html
+++ b/research.html
@@ -2398,14 +2398,11 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <div class="d-article">
 <h3 id="publications">Publications</h3>
 <ul>
-<li>Singal, Amit G., Yixing Chen, Shrihari Sridhar, Vikas Mittal, Hannah Fullington, <strong>Muzeeb Shaik</strong>, Akbar K. Waljee and Jasmin Tiro (2021), “Novel Application of Predictive Modeling: Identifying Patients for a Tailored Approach to Promoting HCC Surveillance in Patients with Cirrhosis,” <em>Clinical Gastroenterology and Hepatology</em> - Accepted (awaiting publication). <a href="https://doi.org/10.1016/j.cgh.2021.02.038" target="_blank">Link</a></li>
+<li><p><strong>Shaik, Muzeeb</strong>, Narendra Bosukonda, Vikas Mittal, and Shrihari Sridhar (2021), “Price Sensitivity and Customer Perceived Switching Costs in Business-to-Business Markets: Joint Effect on Customer Repurchase Intentions,” <strong>Journal of Service Management Research</strong> - Accepted (awaiting publication). <a href="https://papers.ssrn.com/abstract=3530532" target="_blank">SSRN</a></p></li>
+<li><p>Singal, Amit G., Yixing Chen, Shrihari Sridhar, Vikas Mittal, Hannah Fullington, <strong>Muzeeb Shaik</strong>, Akbar K. Waljee and Jasmin Tiro (2021), “Novel Application of Predictive Modeling: Identifying Patients for a Tailored Approach to Promoting HCC Surveillance in Patients with Cirrhosis,” <strong>Clinical Gastroenterology and Hepatology</strong> - Accepted (awaiting publication). <a href="https://doi.org/10.1016/j.cgh.2021.02.038" target="_blank">Link</a></p></li>
 </ul>
 <h3 id="working-papers">Working Papers</h3>
 <ul>
-<li>“Price Sensitivity and Customer Perceived Switching Costs in Business-to-Business Markets: Joint Effect on Customer Repurchase Intentions.” <a href="https://papers.ssrn.com/abstract=3530532" target="_blank">SSRN</a>
-<ul>
-<li>Joint work with Narendra Bosukonda, Vikas Mittal &amp; Shrihari Sridhar.</li>
-</ul></li>
 <li>“The Asymmetric Association of Customer Commitment and Behavioral Intentions in Business-to-Business Markets.” <a href="https://papers.ssrn.com/abstract=3532546" target="_blank">SSRN</a>
 <ul>
 <li>Joint work with Narendra Bosukonda, Vikas Mittal &amp; Shrihari Sridhar.</li>
