--- a/research/index.html
+++ b/research/index.html
@@ -657,7 +657,7 @@
 <p>Chen, Yixing, Taehoon Im, <strong>Muzeeb Shaik</strong>, Narendra Bosukonda, Sonam Singh, Markus Blut, Vikas Mittal, Shrihari Sridhar, and Amit G. Singal (2021), “The Association of Patient Satisfaction and Quality of Care: Theory, Evidence, and Application,” working paper.  <a href="https://papers.ssrn.com/abstract=3970182" target="_blank">Link</a></p>
 </li>
 <li>
-<p>Bosukonda, Narendra, <strong>Muzeeb Shaik</strong>, Vikas Mittal, and Shrihari Sridhar (2021), “Price Sensitivity and Customer Perceived Switching Costs in Business-to-Business Markets: Joint Effect on Customer Repurchase Intentions,” working paper. <a href="https://papers.ssrn.com/abstract=3532546" target="_blank">Link</a></p>
+<p>Bosukonda, Narendra, <strong>Muzeeb Shaik</strong>, Vikas Mittal, and Shrihari Sridhar (2021), “The Asymmetric Association of Customer Commitment and Behavioral Intentions in Business-to-Business Markets,” working paper. <a href="https://papers.ssrn.com/abstract=3532546" target="_blank">Link</a></p>
 </li>
 </ul>
 <hr>
