--- a/teaching/index.html
+++ b/teaching/index.html
@@ -645,13 +645,16 @@
 <h4 id="marketing-analytics-undergraduate">MARKETING ANALYTICS (UNDERGRADUATE)</h4>
 <ul>
 <li>
-<p>Instructor: Fall 2020 (45 students enrolled across two sections)</p>
+<p>Instructor: Fall 2020 (2 sections)</p>
 </li>
 <li>
 <p>Teaching Evaluation: 4.3/5</p>
 <ul>
 <li>Department average for Fall 2020: 3.66/5</li>
 </ul>
+</li>
+<li>
+<p>Dean’s Award for Outstanding Teaching</p>
 </li>
 </ul>
 <h4 id="marketing-management-mba">MARKETING MANAGEMENT (MBA)</h4>
