--- a/research/index.html
+++ b/research/index.html
@@ -643,12 +643,23 @@
     <div class="article-style"><hr>
 <h2 id="publications"><strong>Publications</strong></h2>
 <ul>
-<li>Singal, Amit G., Yixing Chen, Shrihari Sridhar, Vikas Mittal, Hannah Fullington, <strong>Muzeeb Shaik</strong>, Akbar K. Waljee and Jasmin Tiro (forthcoming), “Novel Application of Predictive Modeling: Identifying Patients for a Tailored Approach to Promoting HCC Surveillance in Patients with Cirrhosis,” <em>Clinical Gastroenterology and Hepatology</em>.  <a href="https://doi.org/10.1016/j.cgh.2021.02.038" target="_blank">Link</a></li>
+<li>Singal, Amit G., Yixing Chen, Shrihari Sridhar, Vikas Mittal, Hannah Fullington, <strong>Muzeeb Shaik</strong>, Akbar K. Waljee and Jasmin Tiro (forthcoming), “Novel Application of Predictive Modeling: Identifying Patients for a Tailored Approach to Promoting HCC Surveillance in Patients with Cirrhosis,” <em>Clinical Gastroenterology and Hepatology</em>, 20 (8), 1795–1802.  <a href="https://doi.org/10.1016/j.cgh.2021.02.038" target="_blank">Link</a></li>
 <li><strong>Shaik, Muzeeb</strong>, Narendra Bosukonda, Vikas Mittal, and Shrihari Sridhar (2022), “Price Sensitivity and Customer Perceived Switching Costs in Business-to-Business Markets: Joint Effect on Customer Repurchase Intentions,” <em>Journal of Service Management Research</em>, 6(1), 64-79. <a href="https://papers.ssrn.com/abstract=3530532" target="_blank">SSRN</a>, <a href="https://doi.org/10.5771/2511-8676-2022-1-64" target="_blank">Link</a></li>
 </ul>
 <hr>
 <h2 id="working-papers"><strong>Working Papers</strong></h2>
 <ul>
+<li>
+<p>Han, Kyuhong, <strong>Muzeeb Shaik</strong>, Vikas Mittal, and Shrihari Sridhar (2022), “Designing
+New Studies Using Meta-Analysis for Estimate Precision: The Case of Customer
+Satisfaction and Customer Retention,” working paper.</p>
+</li>
+<li>
+<p>Mittal, Vikas, Kyuhong Han, Carly M. Frennea, Markus Blut, <strong>Muzeeb Shaik</strong>,
+Narendra Bosukonda, and Shrihari Sridhar (2022), “Customer Satisfaction, Loyalty
+Behaviors, and Firm-Financial Performance: What 40 Years of Research Tells
+Us,” working paper.  <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4103893" target="_blank">SSRN</a></p>
+</li>
 <li>
 <p>Chen, Yixing, Taehoon Im, <strong>Muzeeb Shaik</strong>, Narendra Bosukonda, Sonam Singh, Markus Blut, Vikas Mittal, Shrihari Sridhar, and Amit G. Singal (2021), “The Association of Patient Satisfaction and Quality of Care: Theory, Evidence, and Application,” working paper.  <a href="https://papers.ssrn.com/abstract=3970182" target="_blank">SSRN</a></p>
 </li>
