--- a/teaching/index.html
+++ b/teaching/index.html
@@ -641,6 +641,15 @@
 <div class="universal-wrapper">
   
     <div class="article-style"><hr>
+<h2 id="indiana-university-bloomington"><strong>Indiana University Bloomington</strong></h2>
+<h4 id="marketing-research">MARKETING RESEARCH</h4>
+<ul>
+<li>Instructor: Spring 2023 (3 sections)</li>
+</ul>
+<h4 id="introduction-to-marketing-undergraduate---non-business-majors">INTRODUCTION TO MARKETING (UNDERGRADUATE - NON BUSINESS MAJORS)</h4>
+<ul>
+<li>Instructor: Fall 2022 (90 students)</li>
+</ul>
 <h2 id="texas-am-university"><strong>Texas A&amp;M University</strong></h2>
 <h4 id="marketing-analytics-undergraduate">MARKETING ANALYTICS (UNDERGRADUATE)</h4>
 <ul>
