--- a/teaching/index.html
+++ b/teaching/index.html
@@ -650,6 +650,19 @@
 <ul>
 <li>Instructor: Fall 2022 (Online section - 90 students)</li>
 </ul>
+<h4 id="students-comments">STUDENTS’ COMMENTS</h4>
+<ul>
+<li>
+<p>Muzeeb was extremely passionate about his teaching material and you can tell that he thoroughly enjoys what he teaches/working with students. He was always very communicative and has been the most responsive I&rsquo;ve seen from a professor during my time at IU.</p>
+</li>
+<li>
+<p>All information and learning objectives for the class was clearly visible. I also enjoyed the use of slides and made the information very visible for me.</p>
+</li>
+<li>
+<p>This (Into to Marketing) was one of my most enjoyable classes that I have taken here at Indiana. Professor did a great job.</p>
+</li>
+</ul>
+<hr>
 <h2 id="texas-am-university"><strong>Texas A&amp;M University</strong></h2>
 <h4 id="marketing-analytics-undergraduate">MARKETING ANALYTICS (UNDERGRADUATE)</h4>
 <ul>
@@ -671,7 +684,7 @@
 <li>Guest Lecturer: Fall 2021</li>
 <li>Teaching Assistant: Fall 2019</li>
 </ul>
-<h4 id="students-comments">STUDENTS’ COMMENTS</h4>
+<h4 id="students-comments-1">STUDENTS’ COMMENTS</h4>
 <ul>
 <li>“[Muzeeb] understood the problems of students well, went beyond his own necessary capacities to ensure we understood material, and was truly passionate about the topic at hand”.</li>
 <li>“He always encouraged us to initiate our learning process and take responsibility of our work”.</li>
