--- a/teaching/index.html
+++ b/teaching/index.html
@@ -659,7 +659,7 @@
 <p>All information and learning objectives for the class was clearly visible. I also enjoyed the use of slides and made the information very visible for me.</p>
 </li>
 <li>
-<p>This (Into to Marketing) was one of my most enjoyable classes that I have taken here at Indiana. Professor did a great job.</p>
+<p>This (Intro to Marketing) was one of my most enjoyable classes that I have taken here at Indiana. Professor did a great job.</p>
 </li>
 </ul>
 <hr>
