--- a/teaching/index.html
+++ b/teaching/index.html
@@ -653,13 +653,13 @@
 <h4 id="students-comments">STUDENTS’ COMMENTS</h4>
 <ul>
 <li>
-<p>&ldquo;Muzeeb was extremely passionate about his teaching material and you can tell that he thoroughly enjoys what he teaches/working with students. He was always very communicative and has been the most responsive I&rsquo;ve seen from a professor during my time at IU.&rdquo;&quot;</p>
+<p>&ldquo;Muzeeb was extremely passionate about his teaching material and you can tell that he thoroughly enjoys what he teaches/working with students. He was always very communicative and has been the most responsive I&rsquo;ve seen from a professor during my time at IU.&rdquo;</p>
 </li>
 <li>
-<p>&ldquo;All information and learning objectives for the class was clearly visible. I also enjoyed the use of slides and made the information very visible for me.&rdquo;&quot;</p>
+<p>&ldquo;All information and learning objectives for the class was clearly visible. I also enjoyed the use of slides and made the information very visible for me.&rdquo;</p>
 </li>
 <li>
-<p>&ldquo;This (Intro to Marketing) was one of my most enjoyable classes that I have taken here at Indiana. Professor did a great job.&rdquo;&quot;</p>
+<p>&ldquo;This (Intro to Marketing) was one of my most enjoyable classes that I have taken here at Indiana. Professor did a great job.&rdquo;</p>
 </li>
 </ul>
 <hr>
