--- a/teaching/index.html
+++ b/teaching/index.html
@@ -666,18 +666,8 @@
 <h2 id="texas-am-university"><strong>Texas A&amp;M University</strong></h2>
 <h4 id="marketing-analytics-undergraduate">MARKETING ANALYTICS (UNDERGRADUATE)</h4>
 <ul>
-<li>
-<p>Instructor: Fall 2020 (2 sections)</p>
-</li>
-<li>
-<p>Teaching Evaluation: 4.3/5</p>
-<ul>
-<li>Department average for Fall 2020: 3.66/5</li>
-</ul>
-</li>
-<li>
-<p>Dean’s Award for Outstanding Teaching</p>
-</li>
+<li>Instructor: Fall 2020 (2 sections)</li>
+<li>Dean’s Award for Outstanding Teaching</li>
 </ul>
 <h4 id="marketing-management-mba">MARKETING MANAGEMENT (MBA)</h4>
 <ul>
