--- a/research/index.html
+++ b/research/index.html
@@ -660,15 +660,25 @@ Us,” <em>Marketing Letters</em>.  <a href="https://doi.org/10.1007/s11002-023-
 <h2 id="working-papers"><strong>Working Papers</strong></h2>
 <ul>
 <li>
-<p>Han, Kyuhong, <strong>Muzeeb Shaik</strong>, Vikas Mittal, and Shrihari Sridhar (2022), “Designing
-New Studies Using Meta-Analysis for Estimate Precision: The Case of Customer
-Satisfaction and Customer Retention,” working paper.</p>
+<p>“How do Communities Respond to the Trauma of Fatal School Shootings? An
+Economic Perspective,” with Mike Palazzolo, Adithya Pattabhiramaiah , and
+Shrihari Sridhar, <em>working paper</em>.</p>
 </li>
 <li>
-<p>Chen, Yixing, Taehoon Im, <strong>Muzeeb Shaik</strong>, Narendra Bosukonda, Sonam Singh, Markus Blut, Vikas Mittal, Shrihari Sridhar, and Amit G. Singal (2021), “The Association of Patient Satisfaction and Quality of Care: Theory, Evidence, and Application,” working paper.  <a href="https://papers.ssrn.com/abstract=3970182" target="_blank">SSRN</a></p>
+<p>“Business-to-Business Sales Opportunity Management: A Framework, Evidence
+And Application,” with Shrihari Sridhar, and Vikas Mittal, <em>preparing for
+submission</em>.</p>
 </li>
 <li>
-<p>Bosukonda, Narendra, <strong>Muzeeb Shaik</strong>, Vikas Mittal, and Shrihari Sridhar (2021), “The Asymmetric Association of Customer Commitment and Behavioral Intentions in Business-to-Business Markets,” working paper. <a href="https://papers.ssrn.com/abstract=3532546" target="_blank">SSRN</a></p>
+<p>“Designing New Studies Using Meta-Analysis for Estimate Precision: The Case of Customer
+Satisfaction and Customer Retention,” with Han, Kyuhong, Vikas Mittal, and Shrihari Sridhar, <em>working paper</em>.</p>
+</li>
+<li>
+<p>“The Association of Patient Satisfaction and Quality of Care: Theory, Evidence, and Application,” with Chen, Yixing, Taehoon Im, Narendra Bosukonda, Sonam Singh, Markus Blut, Vikas Mittal, Shrihari Sridhar, and Amit G. Singal, <em>working paper</em>.  <a href="https://papers.ssrn.com/abstract=3532546" target="_blank">Link</a></p>
+</li>
+<li>
+<p>“The Economic Impact of Minority Ownership Labels on Online Platforms,” with
+Sai Chand Chintala, <em>work in progress</em>.</p>
 </li>
 </ul>
 <hr>
